--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,2 +1,6 @@
 parameters:
-	ignoreErrors: []
+	ignoreErrors:
+		-
+			message: "#^Parameter \\#1 \\$key of method Illuminate\\\\Support\\\\Collection\\<int,\\(int\\|string\\)\\>\\:\\:put\\(\\) expects int, string given\\.$#"
+			count: 1
+			path: src/DuskServer.php
