--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,10 @@
         "php": "^8.1",
         "composer-runtime-api": "^2.2",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^7.11.1",
+        "laravel/dusk": "dev-develop",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.3",
-        "orchestra/testbench": ">=8.13.0 <8.14.0",
+        "orchestra/testbench": "^9.0",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
