--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,12 @@
     "config": {
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/laravel-labs/php-webdriver"
+        }
+    ],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
