--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.4",
         "orchestra/testbench": "^9.0",
-        "php-webdriver/webdriver": "dev-symfony7 as 1.10.0"
+        "php-webdriver/webdriver": "^1.15.1"
     },
     "require-dev": {
         "laravel/pint": "^1.6",
@@ -89,12 +89,6 @@
     "config": {
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/laravel-labs/php-webdriver"
-        }
-    ],
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
