--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,8 +24,8 @@
         </testsuite>
     </testsuites>
     <php>
-        <server name="APP_ENV" value="testing"/>
-        <server name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
-        <server name="DB_CONNECTION" value="sqlite"/>
+        <env name="APP_ENV" value="testing"/>
+        <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+        <env name="DB_CONNECTION" value="sqlite"/>
     </php>
 </phpunit>
