--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "laravel/dusk": "dev-develop",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.3",
-        "orchestra/testbench": "^9.0",
+        "orchestra/testbench": ">=8.14.0 <8.15.0",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
