--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -62,7 +62,7 @@ jobs:
         run: vendor/laravel/dusk/bin/chromedriver-linux &
 
       - name: Execute tests
-        run: vendor/bin/phpunit -c phpunit.xml
+        run: vendor/bin/phpunit
         env:
           RAY_ENABLED: false
 
