--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "require-dev": {
         "laravel/pint": "^1.6",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^10.1"
+        "phpunit/phpunit": "^10.1",
+        "symfony/polyfill-php83": "1.x-dev"
     },
     "extra": {
         "branch-alias": {
