--- a/composer.json
+++ b/composer.json
@@ -44,13 +44,13 @@
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.3",
         "orchestra/testbench": ">=8.15.0 <8.16.0",
-        "php-webdriver/webdriver": "^1.9"
+        "php-webdriver/webdriver": "^1.9",
+        "symfony/polyfill-php83": "^1.28"
     },
     "require-dev": {
         "laravel/pint": "^1.6",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^10.1",
-        "symfony/polyfill-php83": "1.x-dev"
+        "phpunit/phpunit": "^10.1"
     },
     "extra": {
         "branch-alias": {
