--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.3",
         "orchestra/testbench": ">=8.16.0 <8.17.0",
+        "orchestra/testbench-core": "^8.16.1",
         "php-webdriver/webdriver": "^1.9",
         "symfony/polyfill-php83": "^1.28"
     },
