--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
     "require-dev": {
         "laravel/pint": "^1.6",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^10.1"
+        "phpunit/phpunit": "^10.5 || ^11.0"
     },
     "scripts": {
         "post-autoload-dump": [
