--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -26,12 +26,18 @@ DB_CONNECTION=sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-BROADCAST_CONNECTION=log
-CACHE_STORE=database
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
+SESSION_ENCRYPT=false
+SESSION_PATH=/
+SESSION_DOMAIN=null
+
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=database
+
+CACHE_STORE=database
+CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
