--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "laravel/dusk": "^8.0",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.4",
-        "orchestra/testbench": ">=9.0.0 <9.1.0",
+        "orchestra/testbench": "^9.0",
+        "orchestra/testbench-core": ">=9.0.4 <9.1.0",
         "php-webdriver/webdriver": "^1.15.1",
         "symfony/polyfill-php83": "^1.28"
     },
@@ -84,5 +85,6 @@
     "config": {
         "sort-packages": true
     },
+    "prefer-stable": true,
     "minimum-stability": "dev"
 }
